@@ -15,6 +15,8 @@ New features:
 
 Changes and bug fixes:
 
+* Make sure that errors aren't lost when a collection can't be saved properly
+  (#1169).
 * Ensure that ZipMemoryFile have the proper GDAL name after creation so that we
   can use listdir() (#1092).
 * The fiona._loading module, which supports DLL loading on Windows,
